<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".BiciSeguraActivity" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/greetings_bicisegura" />

            <TextView
                android:id="@+id/lbl_nombres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_nombres" />

            <EditText
                android:id="@+id/edit_nombres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/edit_nombres" />

            <TextView
                android:id="@+id/lbl_apellidos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_apellidos" />

            <EditText
                android:id="@+id/edit_apellidos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/edit_apellidos" />

            <TextView
                android:id="@+id/lbl_cedula"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_cedula" />

            <EditText
                android:id="@+id/edit_cedula"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/edit_cedula"
                android:inputType="number" />

            <TextView
                android:id="@+id/lbl_RH"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_RH" />

            <Spinner
                android:id="@+id/spinner_RH"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/lbl_emergency_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_emergency_contact" />

            <Button
                android:id="@+id/btn_emergency_contact"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:onClick="chooseContact"
                android:text="@string/undefined" />

            <Button
                android:id="@+id/btn_save"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:onClick="save"
                android:text="@string/btn_save" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>