<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LockScreenActivity" >

    <IconButton
        android:id="@+id/btn_emergency_call"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="callEmergencyContact"
        android:text="@string/btn_emergency_call" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@id/lbl_nombres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_nombres" />

            <TextView
                android:id="@+id/txt_nombres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/txt_nombres"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@id/lbl_apellidos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_apellidos" />

            <TextView
                android:id="@+id/txt_apellidos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/txt_apellidos"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@id/lbl_cedula"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_cedula" />

            <TextView
                android:id="@+id/txt_cedula"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/txt_cedula"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@id/lbl_RH"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_RH" />

            <TextView
                android:id="@+id/txt_RH"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/txt_RH"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>