<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AddPartLogActivity" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/lbl_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_description" />

            <EditText
                android:id="@+id/txt_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_description" />

            <TextView
                android:id="@+id/lbl_reason"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_reason" />

            <EditText
                android:id="@+id/txt_reason"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_reason" />

            <TextView
                android:id="@+id/lbl_cost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_cost" />

            <EditText
                android:id="@+id/txt_cost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_cost"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/lbl_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_date" />

            <DatePicker
                android:id="@+id/datepicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_save" 
                android:onClick="saveLog"/>
        </LinearLayout>

    </ScrollView>

</LinearLayout>
