<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AboutActivity" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/lbl_name_place"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_name_place" />

            <EditText
                android:id="@+id/edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_name" />

            <TextView
                android:id="@+id/lbl_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_description" />

            <EditText
                android:id="@+id/edit_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_description" />

            <TextView
                android:id="@+id/text_lbl_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_type" />

            <Spinner
                android:id="@+id/spinner_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/lbl_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_user_name" />

            <EditText
                android:id="@+id/edit_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_optional" />

            <TextView
                android:id="@+id/lbl_user_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_user_email" />

            <EditText
                android:id="@+id/edit_user_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_optional"
                android:inputType="textEmailAddress" />
        </LinearLayout>
    </ScrollView>

