<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="selectPhoto"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AddBycicleActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_add_bycicle" />

    <TextView
        android:id="@+id/lbl_description_bicycle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_description_bicycle" />

    <EditText
        android:id="@+id/input_description_bicycle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/input_placeholder_description_bicycle" >
    </EditText>

    <Button
        android:id="@+id/btn_select_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_select_photo"
        android:onClick="selectPhoto" />

    <Button
        android:id="@+id/btn_add"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="addBicycle"
        android:text="@string/btn_add" />

</LinearLayout>