<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AboutActivity" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/lbl_latitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_about_colazo"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <ImageView
                android:id="@+id/logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/icon" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="all"
                android:text="@string/lbl_explication_colazo" /> 
                
            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="all"
                android:text="@string/thanks_la_gran_rodada" /> 
            <IconButton
                android:id="@+id/follow_on_twitter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="followUsOnTwitter"
                android:text="@string/follow_us_on_twitter" />

            <IconButton
                android:id="@+id/follow_us_on_facebook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="followUsOnFacebook"
                android:text="@string/follow_us_on_facebook" />
            
            <IconButton
                android:id="@+id/share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="share"
                android:text="@string/share" />
        </LinearLayout>

    </ScrollView>
            
</LinearLayout>
